update historical analysis

--- a/DataAnalysis/historical analysis/couchDBanalysis.ipynb
+++ b/DataAnalysis/historical analysis/couchDBanalysis.ipynb
@@ -53506,7 +53506,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "9756094e",
+   "id": "b2ac133a",
    "metadata": {},
    "outputs": [
     {
@@ -53533,7 +53533,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "49821986",
+   "id": "22b70fe0",
    "metadata": {},
    "outputs": [
     {
@@ -53570,7 +53570,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "ddca9511",
+   "id": "00813bd3",
    "metadata": {},
    "outputs": [
     {
@@ -53684,7 +53684,7 @@
     }
    ],
    "source": [
-    "melb2020 = pd.read_json('melb2020')[['year','month','sentiment_score','sentiment']]\n",
+    "melb2020 = pd.read_json('melb2020.json')[['year','month','sentiment_score','sentiment']]\n",
     "melb2020_mean = melb2020[['year','month','sentiment_score']].groupby(['year','month']).mean()\n",
     "melb2020_mean.reset_index()"
    ]
@@ -53692,7 +53692,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "111a5134",
+   "id": "4be97621",
    "metadata": {},
    "outputs": [
     {
@@ -53953,7 +53953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5283bb66",
+   "id": "a403d8eb",
    "metadata": {},
    "outputs": [],
    "source": []
